change data.sql and a little html to more understanding

--- a/src/main/resources/templates/sample/article/articleUpdate.html
+++ b/src/main/resources/templates/sample/article/articleUpdate.html
@@ -39,7 +39,7 @@
             </table>
 
             <a th:href="@{../articles}" class="btn">목록으로</a>
-            <button type="submit">수정하기</button>
+            <button type="submit" class="btn">수정하기</button>
         </form>
     </div>
 </div>
