--- a/src/main/resources/templates/sample/article/articleInsert.html
+++ b/src/main/resources/templates/sample/article/articleInsert.html
@@ -20,21 +20,21 @@
 
                 <tr>
                     <th scope="row">제목</th>
-                    <td colspan="3" class="up"><input type="text" th:field="*{title}" required="required"/></td>
+                    <td ><input type="text" th:field="*{title}" required="required"/></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="under">작성자</th>
-                    <td class="under"><input type="text" th:field="*{writer}" required="required"/></td>
-                </tr>
-
-                <tr>
-                    <th scope="row" class="under">내용</th>
-                    <td colspan="4" class="view_text"><textarea th:field="*{content}" required="required"></textarea></td>
+                    <th>작성자</th>
+                    <td><input type="text" th:field="*{writer}" required="required"/></td>
                 </tr>
 
                 <tr>
-                    <th scope="row" class="under">비밀번호</th>
-                    <td class="under"><input type="text" th:field="*{password}" required="required"/></td>
+                    <th>내용</th>
+                    <td><textarea rows="20" cols="70" th:field="*{content}" required="required"></textarea></td>
+                </tr>
+
+                <tr>
+                    <th>비밀번호</th>
+                    <td><input type="text" th:field="*{password}" required="required"/></td>
                 </tr>
 
             </table>
